syntax = "proto3";
package housingApp;

service HouseService {
    rpc CreateHouse (CreateHouseRequest) returns (CreateHouseResponse);
    rpc ListAllHouses (ListAllHousesRequest) returns (ListAllHousesResponse);
}

message House {
    string Address = 1;
    string OwnerID = 2;
    int32 Age = 3;
    string ID = 4;
}

message CreateHouseRequest {
    string Address = 1;
    string OwnerID = 2;
    int32 Age = 3;
}

message CreateHouseResponse {
    House House = 1;
}

message ListAllHousesRequest {
}

message ListAllHousesResponse {
    repeated House List = 1;
}   